kubernetes/apps/home-automation/tnorbert/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: tnorbert-blog-internal
spec:
  ingressClassName: internal
  rules:
  - host: blog.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tnorbert
            port:
              number: 3000
